feat(api) add more metadata to the messages
